--- a/src/main/resources/assets/new_bloom/lang/en_us.json
+++ b/src/main/resources/assets/new_bloom/lang/en_us.json
@@ -1,4 +1,4 @@
 {
-  "block.new_bloom.chicken_nest": "Chicken Nest"
-
+  "block.new_bloom.chicken_nest": "Chicken Nest",
+  "item.new_bloom.fried_egg": "Fried Egg"
 }
